argocd/apps/ihatemoney/manifests/sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ihatemoney
  labels:
    app: ihatemoney
spec:
  replicas: 1
  serviceName: ihatemoney
  revisionHistoryLimit: 3
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  selector:
    matchLabels:
      app: ihatemoney
  template:
    metadata:
      labels:
        app: ihatemoney
    spec:
      imagePullSecrets:
        - name: pull-secrets
      containers:
        - name: ihatemoney
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              protocol: TCP
          image: docker.cloudsmith.io/myanello/apps/ihatemoney:latest
          volumeMounts:
            - mountPath: /database
              name: db
          resources:
            requests:
              cpu: 10m
              memory: 50Mi
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: db
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: longhorn
        resources:
          requests:
            storage: 50Mi
