argocd/apps/ihatemoney/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ihatemoney
  name: ihatemoney
spec:
  ports:
    - name: "http"
      port: 8000
      targetPort: 8000
  selector:
    name: ihatemoney
