argocd/apps/ihatemoney/manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: ihatemoney-app
  name: ihm-vs-idx-0
  namespace: ihatemoney
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
    sectionName: https
  hostnames:
  - ihm.yanello.net
  rules:
  - backendRefs:
    - name: ihatemoney
      namespace: ihatemoney
      port: 8000
