argocd/apps/ihatemoney/manifests/vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ihm-vs
spec:
  hosts:
  - ihm.yanello.net
  gateways:
  - istio-system/kube-gateway
  http:
  - route:
    - destination:
        host: ihatemoney
        port:
          number: 8000
